tests/NormalTests/paczka1/small_fuzzy/47230738.err
Error in line 2: PBEVnDjKT S488 37,3
Error in line 15: 107 107 116,9
